--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "ai": "^4.0.8",
     "class-variance-authority": "^0.7.0",
